combined watson and compromise

--- a/assets/maintable.html
+++ b/assets/maintable.html
@@ -6,6 +6,9 @@
 		<td>
 			<span id="pTextBuffer" class="ui-widget">say something</span>
 		</td>
+		<td>
+			<span id="btnSpeak">🎤</span>
+		</td>
 	</tr>
-	
+
 </table>
