--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 
 <body>
     <!-- vendor code -->
-    <script src="lib/jquery-1.12.4.js"></script>
-	<script src="lib/jquery-ui.js"></script>
     <link rel="stylesheet" href="lib/jquery-ui.css">
+    <script src="lib/jquery-1.12.4.js"></script>
+    <script src="lib/jquery-ui.js"></script>
     <script src="lib/yaml.min.js"></script>
+    <script src="lib/watson-speech.js"></script>
     <script src="https://unpkg.com/compromise/builds/compromise.min.js"></script>
 
     <!-- project code -->
+    <link rel="stylesheet" href="style.css">
     <script src="src/xac.utilities.js"></script>
     <script src="src/nl3d.main.js"></script>
     <script src="src/nl3d.sandbox.js"></script>
