used chrome speech to text

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- project code -->
     <link rel="stylesheet" href="style.css">
+    <script src="lib/xac.chromes2t.js"></script>
     <script src="src/xac.utilities.js"></script>
     <script src="src/nl3d.main.js"></script>
     <script src="src/nl3d.sandbox.js"></script>
